--- a/verticalmenus.html
+++ b/verticalmenus.html
@@ -31,10 +31,10 @@
 
 <div class="vertical-menu">
   <a href="#" class="active">Home</a>
-  <a href="#">Link 1</a>
-  <a href="#">Link 2</a>
-  <a href="#">Link 3</a>
-  <a href="#">Link 4</a>
+  <a href="#">About Us</a>
+  <a href="#">Our Team</a>
+  <a href="#">Our Services</a>
+  <a href="#">Contact US</a>
 </div>
 
 </body>
